package mangaplus;
syntax = "proto3";

message Web_homeV3{
  message Parent{
    message Data{
      message TopBanners {
        string image = 1;

        message Links {
          string link = 2;
        }

        Links links = 2;
        int32 id = 3;
      }

      message Sections{
        string title = 1;

        message Cards {
          string manga_title = 1;
          string latest_chapter = 2;

          message Chapter {
            message Manga {
              int32 id = 1;
              string title = 2;
              string author = 3;
              string portrait_thumbnail = 4;
              string landscape_thumbnail = 5;
              int32 views = 6;
            }

            Manga manga = 1;
            int32 id = 2;
            string chapter = 3;
            string title = 4;

            enum Language {
              ENGLISH = 0;
              SPANISH = 1;
              FRENCH = 2;
              INDONESIAN = 3;
              PORTUGUESE = 4;
              RUSSIAN = 5;
              THAI = 6;
            }

            Language language = 7;
          }

          Chapter chapter = 3;
        }
        repeated Cards cards = 2;
      }

      repeated TopBanners top_banners = 1;
      repeated Sections sections = 2;
    }
    Data data = 31;
  }
  Parent parent = 1;
}

